# femrep

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-01-gost-gui-selector-russian.md
docs/superpowers/specs/: 2026-06-30-femrep-template-generator-design.md  2026-06-30-gost-russian-report-PROGRESS.md  2026-06-30-template-generator-PROGRESS.md  2026-07-01-gost-gui-selector-russian-design.md
examples/: demo_pipeline.py  gci_points.csv  runs.json  tiny_thermal.f06
installer/: README-INSTALL.txt  debug-ansys2021.bat  femrep-debug.bat  install-ansys2021.bat  install.bat  uninstall.bat
src/femrep/: __init__.py  _gci.py  cli.py  config.yaml  convergence.py  diagnose.py  extract.py  figures.py  govern.py  gui.py  gui_style.py  locale_ru.py  report_docx.py  report_gost_docx.py  report_pdf.py  templates.py  workflow.py
src/femrep/backends/: __init__.py  ansys_dpf.py  nastran_f06.py  nastran_op2.py
src/femrep/cases/: clt_synthetic.py
tests/: test_classify.py  test_gost_report.py  test_gost_wiring.py  test_gui_russian.py  test_gui_templates.py  test_locale_ru.py  test_render_sections.py  test_smoke.py  test_templates.py  test_workflow_template.py
